--- a/Website/static/src/tail.css
+++ b/Website/static/src/tail.css
@@ -2316,21 +2316,6 @@ html{
   transition: background, box-shadow var(--animation-input, 0.2s) ease-in-out;
 }
 
-.range{
-  height: 1.5rem;
-  width: 100%;
-  cursor: pointer;
-  -webkit-appearance: none;
-  --range-shdw: var(--bc);
-  overflow: hidden;
-  background-color: transparent;
-  border-radius: var(--rounded-box, 1rem);
-}
-
-.range:focus{
-  outline: none;
-}
-
 .select{
   display: inline-flex;
   flex-shrink: 0;
@@ -3370,58 +3355,6 @@ body[dir="rtl"] .checkbox:checked,
   }
 }
 
-.range:focus-visible::-webkit-slider-thumb{
-  --focus-shadow: 0 0 0 6px hsl(var(--b1)) inset, 0 0 0 2rem hsl(var(--range-shdw)) inset;
-}
-
-.range:focus-visible::-moz-range-thumb{
-  --focus-shadow: 0 0 0 6px hsl(var(--b1)) inset, 0 0 0 2rem hsl(var(--range-shdw)) inset;
-}
-
-.range::-webkit-slider-runnable-track{
-  height: 0.5rem;
-  width: 100%;
-  border-radius: var(--rounded-box, 1rem);
-  background-color: hsla(var(--bc) / 0.1);
-}
-
-.range::-moz-range-track{
-  height: 0.5rem;
-  width: 100%;
-  border-radius: var(--rounded-box, 1rem);
-  background-color: hsla(var(--bc) / 0.1);
-}
-
-.range::-webkit-slider-thumb{
-  background-color: hsl(var(--b1));
-  position: relative;
-  height: 1.5rem;
-  width: 1.5rem;
-  border-style: none;
-  border-radius: var(--rounded-box, 1rem);
-  -webkit-appearance: none;
-  top: 50%;
-  color: hsl(var(--range-shdw));
-  transform: translateY(-50%);
-  --filler-size: 100rem;
-  --filler-offset: 0.6rem;
-  box-shadow: 0 0 0 3px hsl(var(--range-shdw)) inset, var(--focus-shadow, 0 0), calc(var(--filler-size) * -1 - var(--filler-offset)) 0 0 var(--filler-size);
-}
-
-.range::-moz-range-thumb{
-  background-color: hsl(var(--b1));
-  position: relative;
-  height: 1.5rem;
-  width: 1.5rem;
-  border-style: none;
-  border-radius: var(--rounded-box, 1rem);
-  top: 50%;
-  color: hsl(var(--range-shdw));
-  --filler-size: 100rem;
-  --filler-offset: 0.5rem;
-  box-shadow: 0 0 0 3px hsl(var(--range-shdw)) inset, var(--focus-shadow, 0 0), calc(var(--filler-size) * -1 - var(--filler-offset)) 0 0 var(--filler-size);
-}
-
 @-webkit-keyframes rating-pop{
   0%{
     transform: translateY(-0.125em);
@@ -3606,9 +3539,9 @@ body[dir="rtl"] .checkbox:checked,
   margin: 1.25rem;
 }
 
-.mx-80{
-  margin-left: 20rem;
-  margin-right: 20rem;
+.mx-\[15\%\]{
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .my-2{
@@ -3645,6 +3578,10 @@ body[dir="rtl"] .checkbox:checked,
   height: 83.333333%;
 }
 
+.h-auto{
+  height: auto;
+}
+
 .h-min{
   height: -webkit-min-content;
   height: -moz-min-content;
@@ -3655,8 +3592,8 @@ body[dir="rtl"] .checkbox:checked,
   height: 12rem;
 }
 
-.h-44{
-  height: 11rem;
+.h-60{
+  height: 15rem;
 }
 
 .h-1\/2{
@@ -3667,16 +3604,16 @@ body[dir="rtl"] .checkbox:checked,
   height: 100%;
 }
 
-.h-auto{
-  height: auto;
-}
-
 .w-2\/3{
   width: 66.666667%;
 }
 
 .w-80{
   width: 20rem;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .w-1\/2{
@@ -3687,16 +3624,16 @@ body[dir="rtl"] .checkbox:checked,
   width: 83.333333%;
 }
 
-.w-full{
-  width: 100%;
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-1\/4{
+  width: 25%;
 }
 
 .w-auto{
   width: auto;
-}
-
-.w-1\/3{
-  width: 33.333333%;
 }
 
 .max-w-xs{
@@ -3727,12 +3664,12 @@ body[dir="rtl"] .checkbox:checked,
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.flex-row{
-  flex-direction: row;
-}
-
 .flex-col{
   flex-direction: column;
+}
+
+.gap-5{
+  gap: 1.25rem;
 }
 
 .gap-x-4{
