--- a/Website/templates/moneda.html
+++ b/Website/templates/moneda.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% block title %}Moneda {{ moneda["section_id"] }}{% endblock %}
+{% block scripts %}
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
+<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+{% endblock %}
 {% block content %}
-    <div class="m-5">
+    <div class="py-30">
         <h1 class="text-2xl">
-            1 - Cádiz - Roma - RIIC-2020
+            {{ moneda["section_id"] }} - Cádiz - Roma - RIIC-2020
         </h1>
         <div class="grid grid-cols-4 gap-x-4 gap-y-10">
             <div class="row-span-3">
@@ -20,15 +24,18 @@
             <div>
                 <h2>Otra Numeración</h2>
                 <hr>
-                <p>9876</p>
+                <p></p>
             </div>
             <div>
                 <h2>Colección</h2>
                 <hr>
+                <p></p>
             </div>
             <div>
                 <h2>URI</h2>
                 <hr>
+                <p>{{ moneda.get("uri") }}</p>
+                <a target="_blank" href="{{ moneda.get("uri") }}">Haga clic aquí</a>
             </div>
             <div>
                 <h2>Lugar del Hallazgo</h2>
@@ -59,23 +66,46 @@
                 <hr>
                 <p></p>
             </div>
-
         </div>
-        <br>
-        <br>
         <div class="grid grid-cols-2 gap-x-4 gap-y-10">
-            <h2>Leyenda Anverso</h2>
-            <h2>Leyenda Reverso</h2>
-            <h2>Descripción Anverso</h2>
-            <h2>Descripción Reverso</h2>
+            <div>
+                <h2>Leyenda Anverso</h2>
+                <hr>
+                <p></p>
+            </div>
+            <div>
+                <h2>Leyenda Reverso</h2>
+                <hr>
+                <p></p>
+            </div>
+            <div>
+                <h2>Descripción Anverso</h2>
+                <hr>
+                <p></p>
+            </div>
+            <div>
+                <h2>Descripción Reverso</h2>
+                <hr>
+                <p></p>
+            </div>
         </div>
-        <br>
-        <br>
         <div class="grid grid-cols-1 gap-x-4 gap-y-10">
-            <h2>Bibliografía</h2>
-            <h2>Autor</h2>
-            <h2>Observaciones</h2>
-            <h2>Localización</h2>
+            <div>
+                <h2>Bibliografía</h2>
+                <hr>
+                <p></p>
+            </div>
+            <div>
+                <h2>Observaciones</h2>
+                <hr>
+                <p></p>
+            </div>
+            <div>
+                <h2>Localización</h2>
+                <hr>
+                <div id="map" class="w-full h-60"></div>
+                <script src="../static/mapa.js"></script>
+            </div>
         </div>
     </div>
 {% endblock %}
