--- a/Website/templates/searchbar.html
+++ b/Website/templates/searchbar.html
@@ -1,67 +1,86 @@
 {% extends "base.html" %}
 {% block title %}Buscador{% endblock %}
 {% block content %}
-    <div id="searchbar" class="form-control w-full max-w-xs">
-        <form method="POST" class="flex flex-row m-5">
-            <label class="label" for="m_id">
-                <span class="label-text">ID</span>
+    <div id="searchbar" class="form-control w-full">
+        <form method="POST">
+            <div class="grid grid-cols-3 gap-5">
+                <div>
+                    <label class="label" for="m_id">
+                        <span class="label-text">ID</span>
+                    </label>
+                    <input type="text" placeholder="ID" class="input input-md input-bordered w-full max-w-xs"
+                           name="m_id"
+                           id="m_id">
+                </div>
+                <div>
+                    <label for="materiales" class="label">
+                        <span class="label-text">Material</span>
+                    </label>
+                    <select id="materiales" class="select select-bordered" name="material">
+                        <option value="" selected="{{ "True" if session.get("material") in [None, ""] else "False" }}">
+                            Seleccionar
+                        </option>
+                        {% for m in mats %}
+                            <option selected="{{ "True" if session.get("search")["material"] == m else "False" }}">{{ m }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div>
+                    <label class="label" for="hallazgos">
+                        <span class="label-text">Lugar de hallazgo</span>
+                    </label>
+                    <input id="hallazgos" type="text" class="input input-md input-bordered w-full max-w-xs"
+                           name="hallazgo">
+                </div>
+            </div>
+            <label class="label" for="tipos">
+                        <span class="label-text">Tipo</span>
             </label>
-            <input type="text" placeholder="ID" class="input input-md input-bordered w-full max-w-xs" name="m_id"
-                   id="m_id">
-            <label for="materiales" class="label">
-                <span class="label-text">Material</span>
-            </label>
-            <select id="materiales" class="select select-bordered" name="material">
-                <option selected="{{ "True" if session.get("material") != None else "False" }}">Seleccionar</option>
-                {% for m in mats %}
-                    <option selected="{{ "True" if session.get("search")["material"] == m else "False" }}">{{ m }}</option>
-                {% endfor %}
-            </select>
-            <label class="label" for="cecas">
-                <span class="label-text">Ceca</span>
-            </label>
-            <input id="cecas" type="text" class="input input-md input-bordered w-full max-w-xs" name="ceca">
-            <input type="submit" class="btn" value="Buscar" name="Buscar">
-            <a href="/buscador/reiniciar"><input type="button" class="btn btn-outline" value="Reiniciar"></a>
+            <input id="tipos" class="input input-md input-bordered w-full max-w">
+            <input type="submit" class="btn w-1/3" value="Buscar" name="Buscar">
+            <a href="/buscador/reiniciar" class="w-1/4"><input type="button" class="btn btn-outline" value="Reiniciar"></a>
         </form>
     </div>
     <div class="grid grid-cols-2">
         <div class="btn-group" id="paginador">
-        <form method="post">
-            <button type="submit" class="btn" name="pagina" value="0">INICIO</button>
-            {% if page > 0 %}
-                <button type="submit" class="btn" name="pagina"
-                        value="{{ page - 2 }}">{{ page - 1 }}</button>{% endif %}
-            {% if page > 1 %}
-                <button type="submit" class="btn" name="pagina" value="{{ page - 1 }}">{{ page }}</button>{% endif %}
-            <button type="submit" name="pagina" value="{{ page }}" class="btn btn-active">{{ page + 1 }}</button>
-            {% if page < n_pages - 1 %}
-                <button type="submit" class="btn" name="pagina"
-                        value="{{ page + 1 }}">{{ page + 2 }}</button> {% endif %}
-            {% if page < n_pages - 2 %}
-                <button type="submit" class="btn" name="pagina"
-                        value="{{ page + 2 }}">{{ page + 3 }}</button> {% endif %}
-            <button type="submit" class="btn" name="pagina" value="{{ n_pages - 1 }}">FIN</button>
-        </form>
-    </div>
-    <p class="text-xl">Mostrando 1-10 de 100 monedas</p>
+            <form method="post">
+                <button type="submit" class="btn" name="pagina" value="0">INICIO</button>
+                {% if page > 0 %}
+                    <button type="submit" class="btn" name="pagina"
+                            value="{{ page - 2 }}">{{ page - 1 }}</button>{% endif %}
+                {% if page > 1 %}
+                    <button type="submit" class="btn" name="pagina"
+                            value="{{ page - 1 }}">{{ page }}</button>{% endif %}
+                <button type="submit" name="pagina" value="{{ page }}" class="btn btn-active">{{ page + 1 }}</button>
+                {% if page < n_pages - 1 %}
+                    <button type="submit" class="btn" name="pagina"
+                            value="{{ page + 1 }}">{{ page + 2 }}</button> {% endif %}
+                {% if page < n_pages - 2 %}
+                    <button type="submit" class="btn" name="pagina"
+                            value="{{ page + 2 }}">{{ page + 3 }}</button> {% endif %}
+                <button type="submit" class="btn" name="pagina" value="{{ n_pages - 1 }}">FIN</button>
+            </form>
+        </div>
+        <p class="text-xl">Mostrando 1-10 de 100 monedas</p>
     </div>
 
     <div class="grid grid-cols-2 align-content-end m-top-5">
         {% for i in monedas %}
             <a href="/moneda/{{ i.get("section_id") }}">
-            <div>
-                <div class="card card-side bg-base-100 shadow-xl h-48 w-auto m-5">
-                    <figure class="h-auto w-1/3 w-auto object-contain">
-                        <img src="{{ i.get("image_obverse") }}" alt="../static/logo-sinletras-sinfondo.jpg" class="w-1/2"/>
-                        <img src="{{ i.get("image_reverse") }}" alt="../static/logo-sinletras-sinfondo.jpg" class="w-1/2"/>
-                    </figure>
-                    <div class="card-body">
-                        <h2 class="card-title">{{ i.get("number", "S/N") }}</h2>
-                        <p>{{ i.get("section_id") }}</p>
+                <div>
+                    <div class="card card-side bg-base-100 shadow-xl h-48 w-auto m-5">
+                        <figure class="h-auto w-1/3 w-auto object-contain">
+                            <img src="{{ i.get("image_obverse") }}" alt="../static/logo-sinletras-sinfondo.jpg"
+                                 class="w-1/2"/>
+                            <img src="{{ i.get("image_reverse") }}" alt="../static/logo-sinletras-sinfondo.jpg"
+                                 class="w-1/2"/>
+                        </figure>
+                        <div class="card-body">
+                            <h2 class="card-title">{{ i.get("number", "S/N") }}</h2>
+                            <p>{{ i.get("section_id") }}</p>
+                        </div>
                     </div>
                 </div>
-            </div>
             </a>
 
         {% endfor %}
