--- a/Website/templates/tipo.html
+++ b/Website/templates/tipo.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Tipo{% endblock %}
 {% block content %}
-    <h1 class="text-2xl">RIC I (Second Edition) Augustus 1A</h1>
+    <h1 class="text-2xl">{{ tipo.get("uri")[0] }}</h1>
     <div class="grid grid-cols-4 gap-x-5">
         <div>
             <h2>Ceca</h2>
@@ -28,17 +28,17 @@
         <div>
             <h2>Emisor</h2>
             <hr>
-            <h2>P. Cansius</h2>
+            <h2>X</h2>
         </div>
         <div>
             <h2>Autoridad</h2>
             <hr>
-            <h2>Gaius Octavius | Octavio</h2>
+            <h2>X</h2>
         </div>
         <div>
             <h2>Retrato</h2>
             <hr>
-            <h2>Augusto | Cayo Octavio</h2>
+            <h2>X</h2>
         </div>
     </div>
     <div class="grid grid-cols-2 gap-x-5">
@@ -63,10 +63,13 @@
             <h2>{{ tipo.get("legend_reverse") }}</h2>
         </div>
     </div>
+    <h2>URI:</h2>
+    <hr>
+    <a target="_blank" href="{{ tipo.get("uri")[1].strip() }}"><h2>{{ tipo.get("uri")[1].strip() }}</h2></a>
     <h1 class="text-2xl pt-10">Monedas:</h1>
-    <div class="grid grid-cols-3 gap-x-5 gap-y-0">
+    <div class="grid grid-cols-3 gap-x-5 gap-y-0 h-1/2">
         {% for i in tipo.get("monedas") %}
-            <div class="card card-compact w-auto h-1/2 bg-base-100 shadow-xl">
+            <div class="card card-compact w-auto bg-base-100 shadow-xl">
                 <figure class="h-1/2">
                     <img class="h-full" src="{{ i.get("image_obverse") }}"
                          alt="/../static/logo-sinletras-sinfondo.jpg"/>
